--- a/index.html
+++ b/index.html
@@ -4,12 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web develpoer portfolio </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
+        <nav>
+            <div class="nav">
+                <div class="mary"><h3>Ma<span style="color: orange;">r</span>y</h3></div>
+                <div>
+                    <ul class="menu" style="list-style-type: none;">
+                        <li><a class="port-blog" href="">Portfolio</a></li>
+                        <li><a class="port-blog" href="">Blog</a></li>
+                        <li><button style="background-color: orange;width: 150px;height: 64px;flex-shrink: 0;border-radius: 5px;font-weight: 700px;font-size: 20px;border: 0;padding: 21px 35px 19px 36px;margin-top:13px;">Hire me</button></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
     </header>
-    
+
     <main>
 
     </main>
