--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <div class="nav">
                 <div class="mary"><h3>Ma<span style="color: orange;">r</span>y</h3></div>
@@ -23,6 +23,17 @@
                 </div>
             </div>
         </nav>
+        <div class="banner">
+            <div style="margin-left: 170px;">
+                <h4 class="bnner-greeting">Hi,I am</h3>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button style="color: var(--white-color, #FFF);text-align: center;font-size: 20px;font-weight: 700;width: 200px;height: 64px;border-radius: 5px;background-color: #FD6E0A;">Download CV</button>
+                <button style="color: #FD6E0A;text-align: center;font-size: 20px;font-weight: 700;width: 160px;height: 64px;border-radius: 5px;border: 1px solid #FD6E0A;">Contact</button>
+            </div>
+            <img style="width: 584px;height: 676px;" src="/images/hardy.png">
+
+        </div>
 
     </header>
 
