--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="header">
-        <nav>
+        <nav class="padd">
             <div class="nav">
                 <div class="mary"><h3>Ma<span style="color: orange;">r</span>y</h3></div>
                 <div>
@@ -25,9 +25,9 @@
         </nav>
         <div class="banner">
             <div style="margin-left: 170px;">
-                <h4 class="bnner-greeting">Hi,I am</h3>
+                <h5 class="banner-greeting">Hi,I am</h5>
                 <h1 class="banner-title">Mary Hardy</h1>
-                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <p class="para">Shot what able cold new see hold.Friendly as an betrayed formerly <br> he. Morning because as to society behaved moments.</p><br>
                 <button style="color: var(--white-color, #FFF);text-align: center;font-size: 20px;font-weight: 700;width: 200px;height: 64px;border-radius: 5px;background-color: #FD6E0A;">Download CV</button>
                 <button style="color: #FD6E0A;text-align: center;font-size: 20px;font-weight: 700;width: 160px;height: 64px;border-radius: 5px;border: 1px solid #FD6E0A;">Contact</button>
             </div>
@@ -38,6 +38,30 @@
     </header>
 
     <main>
+        <section class="about">
+            <h3 class="head">About Me</h3>
+            <p class="des">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="info-container">
+                <div>
+                    <p class="info-para">Name</p>
+                    <h5 class="info-head">Mary Hardy</h5>
+                </div>
+                <div>
+                    <p class="info-para">Email:</p>
+                    <h5 class="info-head">info@gmail.com</h5>
+                </div>
+                <div>
+                    <p class="info-para">Date of birth:</p>
+                    <h5 class="info-head">31 November,2000</h5>
+                </div>
+
+                <div>
+                    <p class="info-para">From</p>
+                    <h5 class="info-head">LOs ANgeles</h5>
+                </div>
+                
+            </div>
+        </section>
 
     </main>
 
